fixed spacing issue

--- a/src/gallery.css
+++ b/src/gallery.css
@@ -1,3 +1,6 @@
+body {
+  width: 100%;
+}
 .work {
   width: 100%;
   box-sizing: border-box;
@@ -26,7 +29,6 @@
   display: block;
   padding: 0.35em 1.2em;
   border: 0.1em solid black;
-  margin: 0 0.3em 0.3em 0;
   border-radius: 0.12em;
   box-sizing: border-box;
   text-decoration: none;
@@ -80,6 +82,9 @@
 /*--------------------- gallery grid -----------------------*/
 .row {
   display: flex;
+  max-width: 100%;
+  margin-right: 0;
+  margin-left: 1px;
   flex-wrap: wrap;
   padding: 0 4px;
 }
@@ -116,11 +121,10 @@
 #myBtn {
   display: none; /* Hidden by default */
   position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
+  bottom: 77px; /* Place the button at the bottom of the page */
   right: 30px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
-  padding: 0.35em 1.2em;
-  border: 0.1em solid black;
+  border: none;
   margin: 0 0.3em 0.3em 0;
   border-radius: 35px;
   box-sizing: border-box;
